# kurocode-cli

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  configuration.md  development.md  index.md  installation.md
docs/commands/: ask.md  chat.md  config.md  history.md  models.md
src/kurocode/: __main__.py  types.py
src/kurocode/commands/: ask.py  chat.py  config_cmd.py  history.py  models.py
src/kurocode/core/: renderer.py
src/kurocode/infra/: __init__.py  openrouter_client.py  store.py
src/kurocode/tests/unit/: test_model_registry.py  test_renderer.py  test_session.py
